# bbot

./: .gitignore  BBot.csproj  Cargo.toml  Commands.cs  Consts.cs  Events.cs  HelpFormatter.cs  Program.cs  README.md  TODO.md  bbot.db  bbot_litedb-log.db  bbot_litedb.db
Commands/: About.cs  Autobackup.cs  Autopin.cs  Backup.cs  Changelog.cs  CheckEm.cs  Prefix.cs  Roll.cs  SCP.cs  Search.cs  Setup.cs  Windmill.cs
DatabaseClasses/: ChannelData.cs  GuildData.cs
Helpers/: BackupHelper.cs  DatabaseHelper.cs  GuildsHelper.cs  ImgurHelper.cs  SearchHelper.cs  Services.cs
bot/: Cargo.toml
bot/src/: config.rs  events.rs  main.rs
bot/src/commands/: mod.rs  test.rs
command_derive/: Cargo.toml
command_derive/command_impl/: Cargo.toml
command_derive/command_impl/src/: lib.rs
command_derive/command_types/: Cargo.toml
command_derive/command_types/src/: args.rs  lib.rs  traits.rs
command_derive/src/: lib.rs
framework/: Cargo.toml
framework/src/: args.rs  command.rs  context.rs  lib.rs
