[package]
name = "command_impl"
version = "0.1.0"
authors = ["atune <atune313@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.40"
quote = "1.0.9"
serenity = "0.10.7"
syn = "1.0.72"

[dependencies.proc-macro2]
version = "1.0.27"
# features = ["diagnostics"]

[dependencies.command_types]
path = "../command_types"

[dependencies.framework]
path = "../../framework"